--- a/Project/styleNews.css
+++ b/Project/styleNews.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
   body {
-    background-image: url(/Project/Images/arena.jpg);
+    background-image: url(/Project/Images/arena_background.jpg);
     background-attachment: fixed;
     background-size:cover;
   }
