--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -119,7 +119,22 @@
     color:rgb(27, 27, 27);
     border-left: 5px solid rgba(0, 202, 182, 0.472);
     font-size: 30px;
-    text-align: center;
+    text-align: left;
+  }
+
+  .mediumPictures {
+    width: 267;
+    height: 150;
+    border-color: rgb(0, 100, 200);
+    border-style:outset;
+    border-radius: 9px;
+  }
+  .mediumPictures:hover{
+    box-shadow: 0 0 2px 1px rgb(0,130,200);
+  }
+  .TopNewsPictures{
+    width: 356;
+    height: 200;
   }
 
   /* /Main Page */
