changed the design
made some changes and put a new picture

--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -10,7 +10,7 @@
   #ulNav {
     list-style-type: none;
     margin-left: -20px;
-    margin-top: -8px;
+    margin-top: -3%;
     overflow: hidden;
     background-color: rgb(44, 38, 38);;
     height: 80px;
@@ -123,11 +123,11 @@
   }
 
   .mediumPictures {
-    width: 267;
-    height: 150;
+    width: 32%;
+    height: 18%;
     border-color: rgb(0, 100, 200);
-    border-style:outset;
-    border-radius: 9px;
+    border-radius: 10px;
+    margin-left: 2%;
   }
   .mediumPictures:hover{
     box-shadow: 0 0 2px 1px rgb(0,130,200);
@@ -135,6 +135,19 @@
   .TopNewsPictures{
     width: 356;
     height: 200;
+  }
+  section{
+    background-color: rgb(10, 245, 10);
+    font-size: 20px;
+    font-family: 'Yanone Kaffeesatz',sans-serif;
+    border: rgb(102, 11, 187);
+    border-radius: 10px;
+    border-width: 20px;
+    padding: 10px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
 
   /* /Main Page */
