--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -14,13 +14,13 @@ body::-webkit-scrollbar {
 /*==================================================*/
   #ulNav {
     list-style-type: none;
-    margin-left: -20px;
-    margin-top: -3%;
+    margin-left: -1.25em;
+    margin-top: -1.25em;
     overflow: hidden;
     background-color: rgb(44, 38, 38);;
-    height: 80px;
+    height: 5em;
     width: 99.4%;
-    box-shadow: 0 10px 10px -2px rgba(0,0,0,.5);
+    box-shadow: 0 0.625em 0.625em -0.125em rgba(0,0,0,.5);
     position:fixed;
   }
   
@@ -30,47 +30,45 @@ body::-webkit-scrollbar {
   
   .navText {
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 40px;
+    font-size: 2.0625em;
     text-decoration: none;
     display: block;
     color: white;
-    border: 10px;
+    border: 0.625em;
     border-color: white;
     text-align: center;
-    padding: 3px 50px;
+    padding: 0.016em 1em;
     transition: 0.2s;
   }
 
   .navText:hover {
-    font-size: 40px;
     text-align: center;
     color: rgba(188, 247, 255, 0.85);
     margin-top: -5px;
   }
 
   .navSpace {
-    padding: 25px 1px;
+    padding: 1.875em 0.0625em;
     float: left;
   }
 
   .navSpaceRightBound {
-    padding: 25px 1px;
+    padding: 1.875em 0.0625em;
     float: right;
   }
 
   #signup{
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 40px;
+    font-size: 2.0625em;
     text-decoration: none;
     color: white;
     background-color: rgb(44, 38, 38);
-    margin-top: -20px;
     margin-left: 50px;
     margin-right: 40px;
-    padding: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-    border: 5px black;    
+    padding: 0.35em;
+    padding-left: 0.875em;
+    padding-right: 0.875em;
+    border: 0.3125em black;    
     border-radius: 5px;
   }
 
@@ -82,14 +80,13 @@ body::-webkit-scrollbar {
 
   #login{
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 40px;
+    font-size: 2.0625em;
     text-decoration: none;
     color: white;
     background-color: rgb(44, 38, 38);
-    margin-top: 15px;
-    padding: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 0.35em;
+    padding-left: 0.875em;
+    padding-right: 0.875em;
     border: 5px black;    
     border-radius: 5px;
   }
@@ -154,7 +151,6 @@ body::-webkit-scrollbar {
     padding-bottom: 4%;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 2%;
     margin-bottom: 2%;
     font-weight: 400;
   }
