--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
 body {
-  background-image: url(Project/Images/arenabackground.jpg);
+  background-image: url(/Images/arenabackground.jpg);
   background-attachment:fixed;
   background-size:cover;
   width: 100%;
@@ -63,8 +63,8 @@ body::-webkit-scrollbar {
     text-decoration: none;
     color: white;
     background-color: rgb(44, 38, 38);
-    margin-left: 50px;
-    margin-right: 40px;
+    margin-left: 1.2em;
+    margin-right: 1.2em;
     padding: 0.35em;
     padding-left: 0.875em;
     padding-right: 0.875em;
@@ -110,18 +110,21 @@ body::-webkit-scrollbar {
     
   }
   #grid-item-left {
-    background-color: rgba(69, 69, 69, 0.85);
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(188, 247, 255);
     color:rgb(27, 27, 27);
     font-size: 30px;
     text-align: center;
   }
 
   #grid-item-right {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(255, 255, 255, 0.85);
     color:rgb(27, 27, 27);
     border-left: 5px solid rgba(0, 202, 182, 0.472);
     font-size: 30px;
     text-align: left;
+    padding-left: 1em;
   }
 
   .mediumPictures {
